--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-hook-form": "^7.68.0",
     "react-select-country-list": "^2.2.3",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
